--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -28,6 +27,7 @@
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+    <!--
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
@@ -40,22 +40,19 @@
                 <a class="navbar-brand page-scroll" href="#page-top">Top</a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden"> <a class="page-scroll" href="#page-top"></a> </li>
                     <li> <a class="page-scroll" href="#abstract">Abstract</a> </li>
                     <li> <a class="page-scroll" href="#results">Results</a> </li>
                     <li> <a class="page-scroll" href="#paper">Paper</a> </li>
-                    <!--<li> <a class="page-scroll" href="#data">Data</a> </li>
-                    <li> <a class="page-scroll" href="#grasp_transfer">Grasp Transfer</a> </li>-->
+                    <li> <a class="page-scroll" href="#data">Data</a> </li>
+                    <li> <a class="page-scroll" href="#grasp_transfer">Grasp Transfer</a> </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
+    -->
     <br><br>
     
     <div class="container">
@@ -87,10 +84,7 @@
 
         <section id="paper" class="paper-section">
         <h3>Paper</h3>
-        <!--<p>The Arxiv paper <a href="https://arxiv.org/abs/1708.04672">can be found here </a></p>
-        <ul>
-            <li><a href="files/paper.pdf">Paper</a></li>
-        </ul>-->
+        <p>The Arxiv link <a href="https://arxiv.org/abs/1811.08009">can be found here </a></p>
 
         <!--<h3>Citing this work</h3>
         <p>If you find this work useful in your research, please consider citing:</p>
