--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container">
         <h2>Scalable Logo Recognition using Proxies</h2> by Istvan Fehervari and Srikar Appalaraju
 
-        <h3> <a href="https://arxiv.org/abs/1811.08009">Poster</a> | </h3>
+        <h3> <a href="/files/WACV19_poster_at_conference.pdf">Poster</a> | </h3>
 
         <p>This webpage contains summary details for the paper that is going to be published in <b>IEEE WACV 2019</b> conference held in Hawaii, USA. This paper discusses an approach to detect product logos in images. </p>
         <section id="abstract" class="abstract-section">
