--- a/index.html
+++ b/index.html
@@ -56,7 +56,18 @@
     <br><br>
     
     <div class="container">
-        <h2>Scalable Logo Recognition using Proxies</h2> by Istvan Fehervari and Srikar Appalaraju
+        <div><center><h2>Scalable Logo Recognition using Proxies</h2></center></div>
+        <div id="authors">
+            <h5 id="author1">
+                <div>Istvan Fehervari</div>
+                <div>Amazon.com</div> 
+            </h5>
+             <h5 id="author2">
+                <div>Srikar Appalaraju</div>
+                <div>Amazon.com</div> 
+            </h5>
+        </div>
+
 
         <h5> <a href="/files/WACV19_poster_at_conference.pdf">Poster</a> | <a href="/files/WACV2019_double_blind_conference_reviews.pdf">Double blind reviews</a>  </h5>
 
