--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
       </div>
     </div>
 
+    <center>
+    <span> <a href="files/WACV19_poster_at_conference.pdf" target="_blank">Poster</a> | <a href="files/WACV2019_double_blind_conference_reviews.pdf" target="_blank">IEEE reviews</a>
+    </center>
+
     <div class="row section scrollspy" id="abstract">
       <div class="title">Abstract</div>
       <p align="justify">
