--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="container">
 
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-    <div id="player"></div>
+    <div id="player" style="width:100%;"></div>
 
     <div class="section">
       <div class="row">
@@ -125,20 +125,20 @@
       var player;
       function onYouTubeIframeAPIReady() {
         player = new YT.Player('player', {
-          height: '390',
-          width: '640',
+          //height: '390',
+          //width: '640',
           videoId: 'M7lc1UVf-VE',
           events: {
-            'onReady': onPlayerReady,
+            //'onReady': onPlayerReady,
             'onStateChange': onPlayerStateChange
           }
         });
       }
 
       // 4. The API will call this function when the video player is ready.
-      function onPlayerReady(event) {
-        event.target.playVideo();
-      }
+      //function onPlayerReady(event) {
+      //  event.target.playVideo();
+      //}
 
       // 5. The API calls this function when the player's state changes.
       //    The function indicates that when playing a video (state=1),
