--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
 
   <div class="container">
 
-    <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-    <div id="player" style="width:100%;"></div>
-
+    <div class="title">PL2K Amazon Logo dataset</div>
     <div class="section">
       <div class="row">
         <div class="col s12">
@@ -48,8 +46,12 @@
       </div>
     </div>
 
+    <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+    <div class="title">Demo</div>
+    <div id="player" style="width:100%;"></div>
+
     <center>
-    <span> <a href="files/WACV19_poster_at_conference.pdf" target="_blank">Poster</a> | <a href="files/WACV2019_double_blind_conference_reviews.pdf" target="_blank">IEEE reviews</a>
+    <span> <a href="files/WACV19_poster_at_conference.pdf" target="_blank">Poster</a> | <a href="files/WACV2019_double_blind_conference_reviews.pdf" target="_blank">IEEE reviews</a> | <a href="files/WACV_talk.pptx" target="_blank">Presentation</a>
     </center>
 
     <div class="row section scrollspy" id="abstract">
@@ -127,7 +129,7 @@
         player = new YT.Player('player', {
           //height: '390',
           //width: '640',
-          videoId: 'M7lc1UVf-VE',
+          videoId: 'C0t5P6itprQ',
           events: {
             //'onReady': onPlayerReady,
             'onStateChange': onPlayerStateChange
